--- a/views/common/index.tmpl
+++ b/views/common/index.tmpl
@@ -3,9 +3,9 @@
 
 	<div class="container-fluid">
 		<div>
-			<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+			<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
 				<div class="container">
-				<a class="navbar-brand" href="/index">Home</a>
+					<a class="navbar-brand" href="/">Home</a>
 					<div class="justify-content-end">
 						<ul class="navbar-nav">
 							<li class="nav-item"><a class="nav-link" href="/login">Sign in</a></li>
@@ -13,6 +13,15 @@
 						</ul>
 					</div>
 				</div>
+			</nav>
+		</div>
+		<div style="margin-top:75px;margin-bottom:75px">
+		</div>
+		<div>
+			<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-bottom">
+				<span class="navbar-text" style="width:100%;text-align:center;">
+					Copyright (c) 2017-2018 <a href="http://www.cqnu.edu.cn/">www.cqnu.edu.cn</a> All rights reserved.
+				</span>
 			</nav>
 		</div>
 	</div>
