--- a/views/common/register.tmpl
+++ b/views/common/register.tmpl
@@ -3,61 +3,94 @@
 
 	<div class="container-fluid">
 		<div>
-			<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+			<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
 				<div class="container">
-				<a class="navbar-brand" href="/index">Home</a>
+					<a class="navbar-brand" href="/">Home</a>
 					<div class="justify-content-end">
 						<ul class="navbar-nav">
 							<li class="nav-item"><a class="nav-link" href="/login">Sign in</a></li>
 							<li class="nav-item"><a class="nav-link" href="/register">Sign up</a></li>
-            			</ul>
-        			</div>
+						</ul>
+					</div>
 				</div>
 			</nav>
 		</div>
-		<div>
-			<form id="registerForm" action="/register" method="POST">
-				<div class="form-group">
-      				<label for="id">ID:</label>
-      				<input id="id" class="form-control" name="id" placeholder="Enter student id">
-    			</div>
-    			<div class="form-group">
-      				<label for="email">Email:</label>
-      				<input id="email" type="email" class="form-control" name="email" placeholder="Enter email">
-    			</div>
-				<div class="form-group">
-      				<label for="password">Password:</label>
-      				<input id="password" type="password" class="form-control" name="password" placeholder="Enter password">
-    			</div>
-				<div class="form-group">
-      				<label for="role">Role:</label>
-      				<input id="role" class="form-control" name="role" placeholder="Enter role">
-    			</div>
-    			<div class="form-group">
-					<button type="submit" class="btn btn-primary">Submit</button>
+		<div style="margin-top:75px;margin-bottom:75px">
+			<div class="row">
+				<div class="col-sm-4">
 				</div>
-  			</form>
+				<div class="col-sm-4">
+					<div class="text-center" style="margin-bottom:25px">
+						<h1>用户注册</h1>
+					</div>
+					<form id="registerForm" action="/register" method="POST">
+						<div class="form-group">
+							<input type="text" class="form-control" name="id" placeholder="请输入您的学号/工号">
+						</div>
+						<div class="form-group">
+							<input type="email" class="form-control" name="email" placeholder="邮箱">
+						</div>
+						<div class="form-group">
+							<input id="pwd" type="password" class="form-control" name="password" placeholder="密码">
+						</div>
+						<div class="form-group">
+							<input id="verifyPwd" type="password" class="form-control" placeholder="确认密码">
+						</div>
+						<div class="form-group form-check form-check-inline">
+							<label class="form-check-label">
+								<input class="form-check-input" type="radio" name="role" value="1"> 辅导员
+							</label>
+							<label class="form-check-label">
+								<input class="form-check-input" type="radio" name="role" value="2"> 学生处
+							</label>
+							<label class="form-check-label">
+								<input class="form-check-input" type="radio" name="role" value="3" checked> 学生
+							</label>
+						</div>
+						<div class="form-group btn-group-justified">
+							<center><button type="submit" class="btn btn-primary">Submit</button></center>
+						</div>
+					</form>
+				</div>
+				<div class="col-sm-4">
+				</div>
+			</div>
+		</div>
+		<div>
+			<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-bottom">
+				<span class="navbar-text" style="width:100%;text-align:center;">
+					Copyright (c) 2017-2018 <a href="http://www.cqnu.edu.cn/">www.cqnu.edu.cn</a> All rights reserved.
+				</span>
+			</nav>
 		</div>
 	</div>
 
 	<script>
-	$(document).ready(function() {
-		var	options = {
-			success  : ResponseCallback
+		$(document).ready(function() {
+			$("#verifyPwd").blur(VerifyPassword);
+
+			var	options = {
+				success  : ResponseCallback
+			};
+
+			$("#registerForm").ajaxForm(options);
+		});
+
+		function VerifyPassword() {
+			if ($("#pwd").val() != $("#verifyPwd").val()) {
+				layer.tips("两次输入密码不一致！", $("#verifyPwd"));
+			}
 		}
 
-		$("#registerForm").ajaxForm(options)
-	});
-
-	function ResponseCallback(response,status,xhr,$form) {
-		if (response.status==1) {
-			layer.alert(response.msg, {icon:2})
+		function ResponseCallback(response,status,xhr,$form) {
+			if (response.status==1) {
+				layer.alert(response.msg, {icon:2});
+			}
+			if (response.status==0) {
+				$.cookie("Authrization", response.Authrization);
+				window.location.href="/auth/"+$("#role").val()+"/"+$("#id").val()+"/profile";
+			}
 		}
-		if (response.status==0) {
-			$.cookie("Authrization", response.Authrization)
-			window.location.href="/auth/"+$("#role").val()+"/"+$("#id").val()+"/profile";
-		}
-	}
 	</script>
 
 {% template "common/footer.tmpl" %}
